@@ -39,6 +39,7 @@ Trunk (unreleased changes)
   OPTIMIZATIONS
 
   BUG FIXES
+    HCAT-45. HCatalog release tar ball source code has problems (gates)
 
     HCAT-41. Changes to hcat.sh in HCATALOG-20 broke the -e option (gates)
 
